--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aurelia": "^0.5.0",
+    "aurelia-cli": "^1.2.2",
     "body-parser": "^1.19.0",
     "bulebird": "^0.0.1-security",
     "express": "^4.17.1",
