--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-nodemon": "^0.5.4",
     "grunt-env": "^1.0.1",
     "jshint-stylish": "^2.2.1",
+    "mongodb": "^3.4.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.3",
