--- a/Server/package.json
+++ b/Server/package.json
@@ -18,11 +18,12 @@
     "grunt-contrib-nodemon": "^0.5.4",
     "grunt-env": "^1.0.1",
     "jshint-stylish": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.3",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "winston": "^3.2.1",
