--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,15 @@
     "aurelia-bootstrapper": "^2.3.2",
     "aurelia-fetch-client": "^1.8.2",
     "aurelia-http-client": "^1.3.1",
+    "bcryptjs": "^2.4.3",
     "flatpickr": "^4.6.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongo": "^0.1.0",
-    "mongoose": "^5.8.1"
+    "mongoose": "^5.8.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
